--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # DataSource Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/fullstackuserdetials?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://192.168.224.126:3306/fullstackuserdetials?createDatabaseIfNotExist=true
+spring.datasource.username=suresh
+spring.datasource.password=12345
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate Configuration
